manifests/prestashop/network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prestashop
  namespace: prestashop
  labels:
    env: home
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: prestashop

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prestashop
  namespace: prestashop
  annotations:
    cert-manager.io/cluster-issuer: hostfab-dev
    kubernetes.io/ingress.class: nginx
  labels:
    app: prestashop
    env: home
spec:
  tls:
  - hosts:
    - store.hostfabtech.xyz
    secretName: tls-store-hostfabtech-xyz
  rules:
  - host: store.hostfabtech.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prestashop
            port:
              number: 80
